# moodle-cli

./: .gitignore  CLAUDE.md  README.md  SKILL.md  config.example.yaml  config.yaml  pyproject.toml
.github/release-notes/: 0.2.1.md  0.2.2.md  0.2.3.md  0.2.4.md  0.2.5.md  0.3.0.md  0.3.1.md  0.4.0.md  0.4.1.md  0.4.2.md  v0.2.0.md
.github/workflows/: ci.yml  publish.yml  release.yml
moodle_cli/: __init__.py  auth.py  cli.py  client.py  config.py  constants.py  exceptions.py  formatter.py  html_utils.py  models.py  output.py  parser.py  scraper.py  self_update.py  skill_bundle.py  update_check.py  url_resolver.py  version.py
tests/: test_auth.py  test_cli_e2e.py  test_client.py  test_forum_search.py  test_self_update.py  test_skill_bundle.py  test_url_resolver.py  test_version.py
